# langgraph-agent_and_ag-ui

./: .env  .gitignore  README.md  all_events.pkl  fds_dev.sh  langgraph.json  lg_ag_ui.ipynb  plan_sample.yml  pyproject.toml  raw_messages.json  raw_messages2.json  test.ipynb
.github/instructions/: general-instructions.instructions.md
my-ag-ui-app/: package.json
my-ag-ui-app/src/app/: layout.tsx  page copy.tsx  page.tsx
my-ag-ui-app/src/components/: CustomChatUI.tsx
run_agent/: .gitignore  main.js  messages.json  package-lock.json  package.json  state.json
run_agent/chat_ui/: CHAT_FEATURES.md  CHAT_FIXES.md  REFACTORING.md  package-lock.json  package.json  vite.config.ts
run_agent/chat_ui/src/: App.tsx  main.tsx
run_agent/chat_ui/src/components/: ChatHeader.tsx  ChatHistorySidebar.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessagesContainer.tsx  CodeMessageComponent.tsx  CurrentMessage.tsx  GroupedMessageExample.tsx  InterruptMessageComponent.tsx  InterruptPrompt.tsx  RegularMessageGroupComponent.tsx  ToolCallGroupComponent.tsx  UnsupportedCodeViewer.tsx  VueSfcPreview.tsx  index.ts
run_agent/chat_ui/src/hooks/: index.ts  useAgentService.ts  useAgentService_backup.ts  useChatHistory.ts  useChatState.ts
src/poc/: ag_ui_server.py  langgraphs_events.txt  lg_ag_ui.py  main.py  my_agents.py  patched_langgraph_agent.py  sample-filtered-stream.txt  sample-raw-stram.txt  sample_event.yml  test_agents.py  test_studio.py  utils.py
src/poc/agents/: coding_agent.py  plan_executer.py  research_agent.py  state.py  structured_output.py  supervisor.py  utils.py
(+11 files in other folders)
